@@ -2,6 +2,7 @@
 == ChangeLog ==
  * could not show module info in admin page when XCache is the last module
  * wrong http auth realm
+ * coverager: font-size and newline fix for firefox
 
 1.2.2 2007-12-29
 == ChangeLog ==
